Temporarily fix play button offset on mobile
Create a temporary fix for the play button offset when viewing on a mobile device. This method is not fully tested.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Pirata+One|Rubik:900');
-
+@media only screen and (max-width: 800px) {
+  .audioBtn{
+    width:100px !important;
+  }
+}
 body {
     display: flex;
     justify-content: center;
